cloudformation/templates/archive/vpc-with-subnet-old.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: 'VPCとsubnetを作成する最小テンプレート'

Resources:
  SimpleVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: SimpleVPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SimpleVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: true     
      Tags:
        - Key: Name
          Value: PublicSubnet

  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyIGW

  AttachGateway:
   Type: AWS::EC2::VPCGatewayAttachment
   Properties:
     VpcId: !Ref SimpleVPC
     InternetGatewayId: !Ref MyInternetGateway

  PublicRouteTable:
   Type: AWS::EC2::RouteTable
   Properties:
     VpcId: !Ref SimpleVPC
     Tags:
       - Key: Name
         Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for EC2 instance
      VpcId: !Ref SimpleVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: EC2SecurityGroup

  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0d52744d6551d851e
      InstanceType: t3.micro
      KeyName: MATSUFUJI_SHOICHI
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      Tags:
        - Key: Name
          Value: MyEC2Instance

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref SimpleVPC
  
  SubnetId:
    Description: Subnet ID
    Value: !Ref PublicSubnet
  
  StackRegion:
    Description: Stack Region
    Value: !Ref AWS::Region
